<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="br.com.projeto10.fragment.AutenticacaoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_login"
                android:textColor="#0000FF"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_hint_login"
                android:id="@+id/edLogin"
                android:inputType="textEmailAddress"
                android:text="hernand.azevedo@gmail.com"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_senha"
                android:textColor="#0000FF"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_hint_senha"
                android:id="@+id/edSenha"
                android:inputType="textPassword"
                android:text="123"
                android:layout_marginBottom="15dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnEntrar"
                android:text="@string/str_entrar"/>
        </LinearLayout>

    </ScrollView>


</LinearLayout>
